# pyo3_bindgen

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.git_hooks/: install.bash
.github/workflows/: dependabot.yml  pre-commit.yml  rust.yml
examples/: Cargo.toml  build.rs  math.rs  os_sys.rs  pygal.rs  random.rs
pyo3_bindgen/: Cargo.toml
pyo3_bindgen/src/: lib.rs
pyo3_bindgen_cli/: Cargo.toml
pyo3_bindgen_cli/src/: main.rs
pyo3_bindgen_cli/tests/: cli.rs
pyo3_bindgen_engine/: Cargo.toml
pyo3_bindgen_engine/benches/: bindgen.rs
pyo3_bindgen_engine/src/: bindgen.rs  build_utils.rs  codegen.rs  config.rs  lib.rs  traits.rs  types.rs
pyo3_bindgen_engine/src/bindgen/: attribute.rs  class.rs  function.rs  module.rs
pyo3_bindgen_engine/src/syntax/: class.rs  function.rs  import.rs  mod.rs  module.rs  property.rs  type_var.rs
pyo3_bindgen_engine/src/syntax/common/: attribute_variant.rs  function_definition.rs  ident.rs  mod.rs  path.rs
pyo3_bindgen_engine/src/types/: mod.rs
pyo3_bindgen_engine/src/typing/: from_py.rs  into_rs.rs  mod.rs
pyo3_bindgen_engine/src/utils/: error.rs  io.rs  mod.rs  result.rs  text.rs
pyo3_bindgen_engine/tests/: bindgen.rs
pyo3_bindgen_macros/: Cargo.toml  build.rs
pyo3_bindgen_macros/src/: lib.rs  parser.rs  utils.rs
