[package]
name = "pyo3_bindgen"
authors.workspace = true
categories.workspace = true
description = "Automatic generation of Rust bindings to Python modules"
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
pyo3 = { workspace = true }
pyo3_bindgen_engine = { workspace = true }
pyo3_bindgen_macros = { workspace = true, optional = true }

[features]
default = []
# Enables `import_python!` macro from `pyo3_bindgen_macros` crate
macros = ["dep:pyo3_bindgen_macros"]
# Enables type mapping between Python `numpy::ndarray` and Rust `numpy::PyArray`
numpy = ["pyo3_bindgen_engine/numpy"]

[package.metadata.docs.rs]
all-features = true
