[package]
name = "pyo3_bindgen_engine"
authors.workspace = true
categories.workspace = true
description = "Engine for automatic generation of Rust bindings to Python modules"
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
itertools = { workspace = true }
proc-macro2 = { workspace = true }
pyo3 = { workspace = true }
quote = { workspace = true }
rustc-hash = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
indoc = { workspace = true }
prettyplease = { workspace = true }

[build-dependencies]
pyo3-build-config = { workspace = true }

[features]
default = []
numpy = []

[[bench]]
name = "bindgen"
harness = false
